[tool.poetry]
name = "cadeado-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
Flask-Migrate = "^4.0.0"
PyJWT = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
